# runanywhere-sdks

./: -  .clangd  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksbaseline  .gitmodules  .pre-commit-config.yaml  .syncpackrc.json  .yarnrc.yml  AGENTS.md  ANDROID_PARITY_IMPLEMENTATION_PLAN.md  BENCHMARKS_IMPLEMENTATION_PROMPT.md  BENCHMARKS_TASK_NOTES_ANDROID.md  BENCHMARKS_TASK_NOTES_IOS.md  BUILD.md  Brewfile  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Diffusion Models on Mobile.md  IMPLEMENTATION_SUMMARY.md  KOTLIN-ANDROID-IMPLEMENTATION-ROADMAP.md  LICENSE  LOGS.txt  Mintfile  Package.resolved  Package.swift  QUICKSTART_ANDROID.md  README.md  RELEASE_GUIDE.md  SAMPLE_APPS_GAP_ANALYSIS.md  SAMPLE_APPS_GAP_ANALYSIS_UPDATED.md  SDK_COMPARISON_ANALYSIS.md  SDK_GAP_ANALYSIS_TEXT_GENERATION.md  SDK_INTEGRATION_GUIDE.md  SHARED_TASK_NOTES.md  SHERPA_ONNX_INTEGRATION_COMPLETE.md  THIRD_PARTY_LICENSES.md  (+24 more)
core/: CMakeLists.txt  README.md
core/Foundation/: audio_utils.h  structured_output.cpp
core/Public/: ra_auth.cpp  ra_auth.h  ra_benchmark.cpp  ra_benchmark.h  ra_device.cpp  ra_diffusion.cpp  ra_download.cpp  ra_errors.c  ra_errors.h  ra_event.cpp  ra_event.h  ra_extract.cpp  ra_file.cpp  ra_file.h  ra_image.cpp  ra_image.h  ra_lifecycle.c  ra_llm_dispatch.cpp  ra_model.cpp  ra_model.h  ra_pipeline.cpp  ra_platform_adapter.c  ra_platform_llm.h  ra_primitive_dispatch.cpp  ra_rag.h  ra_server.cpp  ra_server.h  ra_state.cpp  ra_state.h  ra_status.c  ra_storage.cpp  ra_storage.h  ra_structured.cpp  ra_telemetry.cpp  ra_telemetry.h  ra_tool.cpp  ra_version.c  ra_vlm.cpp  ra_vlm.h
core/abi/: ra_auth.cpp  ra_core_init.c  ra_diffusion.cpp  ra_download.cpp  ra_download.h  ra_extract.cpp  ra_file.cpp  ra_http.cpp  ra_lifecycle.h  ra_llm_dispatch.cpp  ra_model.cpp  ra_pipeline.cpp  ra_pipeline.h  ra_platform_llm.cpp  ra_plugin.h  ra_primitive_dispatch.cpp  ra_primitives.h  ra_rag.cpp  ra_server.cpp  ra_shared_facade.c  ra_state.cpp  ra_storage.cpp  ra_structured.cpp  ra_telemetry.cpp  ra_tool.cpp  ra_vlm.cpp  rac_compat.c  rac_compat.h
core/graph/: cancel_token.h  graph_scheduler.cpp  graph_scheduler.h  memory_pool.h  pipeline_node.h  ring_buffer.h  stream_edge.h
core/model_registry/: lora_registry.cpp  model_compatibility.cpp  model_downloader.cpp  model_downloader.h  model_downloader_stub.cpp  model_registry.h
core/net/: environment.cpp  environment.h  http_client.cpp  http_client.h  telemetry.cpp
core/registry/: plugin_loader.h  plugin_registry.cpp  plugin_registry.h
core/router/: engine_router.cpp  engine_router.h  hardware_profile.cpp  hardware_profile.h
core/tests/: CMakeLists.txt  abi_extensions_test.cpp  abi_test.cpp  auth_manager_test.cpp  cancel_token_test.cpp  energy_vad_test.cpp  engine_router_test.cpp  hardware_profile_test.cpp  llamacpp_live_test.cpp  llm_metrics_test.cpp  memory_pool_test.cpp  net_util_errors_test.cpp  plugin_loader_dynamic_test.cpp  plugin_registry_abi_test.cpp  plugin_registry_lifecycle_test.cpp  plugin_registry_test.cpp  proto_roundtrip_test.cpp  ra_auth_abi_test.cpp  ra_download_sha256_test.cpp  ra_model_abi_test.cpp  ra_rag_abi_test.cpp  ra_telemetry_abi_test.cpp  ring_buffer_test.cpp  sentence_detector_test.cpp  sherpa_live_test.cpp  stream_edge_stress_test.cpp  stream_edge_test.cpp  structured_output_test.cpp  text_sanitizer_test.cpp  tool_calling_test.cpp  voice_pipeline_integration_test.cpp
core/util/: audio_utils.cpp  energy_vad.cpp  energy_vad.h  extraction.cpp  extraction.h  file_manager.cpp  llm_metrics.cpp  llm_metrics.h  storage_analyzer.cpp  structured_output.h  tool_calling.cpp  tool_calling.h
core/voice_pipeline/: text_sanitizer.cpp  text_sanitizer.h  voice_pipeline.cpp  voice_pipeline.h
engines/: .clang-format  AGENTS.md  CMakeLists.txt
engines/cloud/: CMakeLists.txt  cloud_stt_provider.h  rac_plugin_entry_cloud.cpp  rac_stt_cloud.cpp
engines/common/: rac_engine_device_type.h  rac_engine_jni_bridge.h  rac_engine_stt_types.h  rac_engine_unavailable.h
engines/coreml/: rac_diffusion_coreml.mm  rac_plugin_entry_coreml.cpp
engines/diffusion-coreml/: CMakeLists.txt  diffusion_coreml_backend.h  diffusion_coreml_backend.mm  diffusion_plugin.cpp  rac_plugin_entry_diffusion.cpp  rac_plugin_entry_diffusion_coreml.cpp  rac_static_register_diffusion_coreml.cpp
engines/genie/: CMakeLists.txt  genie_backend.cpp  genie_backend.h  genie_plugin.cpp  rac_plugin_entry_genie.cpp  rac_static_register_genie.cpp
engines/llamacpp/: CMakeLists.txt  llamacpp_backend.cpp  llamacpp_backend.h  llamacpp_plugin.cpp  llamacpp_plugin.h  patch_ggml_armv7.cmake  rac_backend_llamacpp_register.cpp  rac_backend_llamacpp_vlm_register.cpp  rac_embeddings_llamacpp.cpp  rac_llamacpp_vlm_ops.cpp  rac_llm_llamacpp.cpp  rac_plugin_entry_llamacpp.cpp  rac_plugin_entry_llamacpp_vlm.cpp  rac_rerank_llamacpp.cpp  rac_static_register_llamacpp.cpp  rac_static_register_llamacpp_vlm.cpp  rac_vlm_llamacpp.cpp
engines/metalrt/: CMakeLists.txt  README.md  metalrt_plugin.cpp  rac_backend_metalrt_register.cpp  rac_llm_metalrt.cpp  rac_llm_metalrt.h  rac_plugin_entry_metalrt.cpp  rac_static_register_metalrt.cpp  rac_stt_metalrt.cpp  rac_stt_metalrt.h  rac_tts_metalrt.cpp  rac_tts_metalrt.h  rac_vlm_metalrt.cpp  rac_vlm_metalrt.h
engines/mlx/: CMakeLists.txt  mlx_bundle_policy.h  (+3 more)
idl/: CMakeLists.txt  README.md  chat.proto  component_types.proto  connect.proto  diarization.proto  diffusion_options.proto  download_service.proto  embeddings_options.proto  errors.proto  hardware_profile.proto  hybrid_router.proto  lifecycle_service.proto  llm_options.proto  llm_service.proto  logging.proto  lora_options.proto  model_types.proto  pipeline.proto  rac_options.proto  rag.proto  rerank.proto  router.proto  sdk_events.proto  sdk_init.proto  segmentation.proto  solutions.proto  storage_types.proto  structured_output.proto  stt_options.proto  thinking_tag_pattern.proto  tool_calling.proto  tts_options.proto  vad_options.proto  vlm_options.proto  vocoder.proto  voice_agent_service.proto  voice_events.proto
runtimes/: AGENTS.md  CMakeLists.txt
(+6891 files in other folders)
